# causalspyne-expt

./: README.md  config.yaml  config_slurm.yaml  gen_table.py  hint.sh  pyproject.toml  run_benchmark_slurm.sh  s_boxplot_acc.py  sbatch_benchmark_slurm.sh
slurm/: config.yaml
workflow/: Snakefile
workflow/scripts/: boxplot_acc.py  boxplot_shd.py  eval_anc_acc.py  eval_shd.py  fit_fci.py  fit_linlam.py  fit_parcelingam.py  generate_data.py  join_csv.py
