[project]
name = "causalspyne-expts"
version = "0.1.0"
description = "Experiments for causalspyne"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "causal-learn>=0.1.3.8",
    "causalspyne",
    "seaborn>=0.13.2",
    "snakefmt>=0.10.2",
    "snakemake-executor-plugin-slurm>=0.11.2",
    "snakemake>=8.25.0",
]

[tool.uv.sources]
causalspyne = { git = "https://github.com/marrlab/causalspyne" }
